modified create-toDo route and swagger accordingly
